<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/EnterE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tmail"
        />


    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/EnterE" />


    <TextView
        android:id="@+id/EPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pass"
        android:layout_below="@id/mail"


        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pas"
        android:inputType="textPassword"
        android:layout_below="@id/EPass"

       />

    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/L"
        android:layout_below="@id/password"

        />



</RelativeLayout>